# audacity

./: .gitignore  CMakeLists.txt  TimeStretchingWaveClip.md  ambiguous_APIs.md  audio-rendering-flowchart.md  effect-dynamic-view-construction.md  path-to-release.md  path-to-release.wsd  playback-state-diagram.md  tmp.md
au4/: CMakeLists.txt  uncrustify_muse.cfg
cmake-proxies/: CMakeLists.txt
cmake-proxies/Gaussian-Mixture-Model/: CMakeLists.txt
cmake-proxies/Gaussian-Utils/: CMakeLists.txt
cmake-proxies/btrack/: CMakeLists.txt
cmake-proxies/libsoxr/: CMakeLists.txt
cmake-proxies/libvampp/: CMakeLists.txt
cmake-proxies/marsyas/: CMakeLists.txt
cmake-proxies/qm-dsp/: CMakeLists.txt
cmake-proxies/qm-vamp-plugins/: CMakeLists.txt
lib-src/btrack/: CMakeLists.txt
lib-src/btrack/src/: BTrack.cpp  CMakeLists.txt
lib-src/btrack/tests/: Test_BTrack.cpp
lib-src/marsyas/: CMakeLists.txt
lib-src/qm-vamp-plugins/: repoint.bat  repoint.ps1
libraries/: CMakeLists.txt
libraries/lib-audacity/: CMakeLists.txt  CompressorInstance.h  EffectManager.h  GetMessageBoxCb.h  IAudacityCommand.h  LibAudacityApi.cpp  LibAudacityApi.h  LibAudacityTypes.h  ShuttleGetDefinition.h
libraries/lib-audacity-application-logic/: AmplifyBase.h  AudacityApplicationLogic.cpp  AudacityApplicationLogic.h  AudacityApplicationLogicTypes.h  CMakeLists.txt  EffectManager.cpp  EffectManager.h  GetMessageBoxCb.h  IAudacityCommand.h  StatefulPerTrackEffect.h
libraries/lib-audio-io/: AudioIO.cpp  AudioIO.h
libraries/lib-audio-unit/: AudioUnitInstance.cpp
libraries/lib-builtin-effects/: AmplifyBase.h
libraries/lib-clip-analysis/: AudioSegmentSampleView.cpp  AudioSegmentSampleView.h  CMakeLists.txt  CircularClip.cpp  CircularClip.h  CircularSampleBuffer.h  ClipAnalysis.cpp  ClipAnalysis.h  ClipAnalysisUtils.cpp  ClipAnalysisUtils.h  ClipInterface.h  ClipInterfacePartialImpl.h  ClipOnsetDetector.cpp  ClipOnsetDetector.h  ClipTimingEstimator.cpp  ClipTimingEstimator.h  GetBeatIndices.cpp  GetBeatIndices.h  GetBpmFromOdf.cpp  GetBpmFromOdf.h  GetBpmFromOdfXcorr.cpp  GetBpmFromOdfXcorr.h  GetOdf.cpp  GetOdf.h  ODF.h  OnsetDetector.cpp  OnsetDetector.h  ResamplingClip.cpp  ResamplingClip.h  SpectrumTransformer.h  TimeDiv.cpp  TimeDiv.h  rhythm-retrieval.md  tempo-detection.md
libraries/lib-components/: EffectInterface.cpp  EffectInterface.h
libraries/lib-effects/: Effect.cpp  Effect.h  EffectBase.cpp  EffectBase.h  EffectOutputTracks.h  EffectPlugin.h  MixAndRender.cpp  MixAndRender.h  PerTrackEffect.cpp  PerTrackEffect.h  StatefulEffectBase.cpp  StatefulEffectBase.h
libraries/lib-import-export/: Import.cpp  ImportPlugin.h  ImportUtils.cpp  ImportUtils.h
libraries/lib-math/: Beat.h  CMakeLists.txt
libraries/lib-mixer/: AudioIOSequences.h  EffectStage.cpp  EffectStage.h  Envelope.h  Mix.cpp  Mix.h  MixerSource.cpp  MixerSource.h  WideSampleSequence.cpp  WideSampleSequence.h  WideSampleSource.cpp  WideSampleSource.h
libraries/lib-module-manager/: PluginHost.cpp
libraries/lib-music-information-retrieval/: BeatFinder.cpp  BeatFinder.h  CMakeLists.txt  CreateVampPluginInstance.cpp  CreateVampPluginInstance.h  GetBeats.cpp  GetBeats.h  GetBeatsUsingBTrack.cpp  GetBeatsUsingBTrack.h  GetBeatsUsingQueenMaryBarBeatTracking.cpp  GetBeatsUsingQueenMaryBarBeatTracking.h  GetMeterUsingTatumQuantizationFit.cpp  GetVampFeatures.cpp  GetVampFeatures.h  GetVampFeaturesFromPlugin.h  MirAudioSource.h  MirDsp.cpp  MirDsp.h  MirTypes.cpp  MirTypes.h  MirUtils.cpp  MirUtils.h  MusicInformationRetrieval.cpp  MusicInformationRetrieval.h  PowerSpectrumGetter.cpp  PowerSpectrumGetter.h  QueenMaryBeatFinder.cpp  QueenMaryBeatFinder.h  StftFrameProvider.cpp  StftFrameProvider.h
libraries/lib-numeric-formats/: Beats.cpp  Beats.h  CMakeLists.txt  ProjectTimeSignature.cpp
libraries/lib-project-file-io/: SqliteSampleBlock.cpp
libraries/lib-realtime-effects/: RealtimeEffectManager.cpp  RealtimeEffectManager.h  RealtimeEffectState.cpp  RealtimeEffectState.h
libraries/lib-sample-track/: Mix.cpp  Mix.h  MixerSource.cpp  MixerSource.h  SampleTrack.h  SampleTrackCache.cpp  SampleTrackCache.h
libraries/lib-screen-geometry/: ZoomInfo.h
libraries/lib-stretching-sample-track/: CMakeLists.txt  StretchingPlaybackTrackFactory.cpp  StretchingPlaybackTrackFactory.h  StretchingSampleTrack.cpp  StretchingSampleTrack.h  WaveClipProcessor.h
libraries/lib-stretching-sequence/: AudioSegment.cpp  AudioSegment.h  AudioSegmentFactory.cpp  AudioSegmentFactory.h  AudioSegmentFactoryInterface.h  CMakeLists.txt  ClipInterface.h  ClipSegment.cpp  ClipSegment.h  SilenceSegment.cpp  SilenceSegment.h  StretchingSequence.cpp  StretchingSequence.h
libraries/lib-tempo/: BeatsPerMinute.cpp  BeatsPerMinute.h  CMakeLists.txt
libraries/lib-theme/: AllThemeResources.h
plug-ins/: CMakeLists.txt
src/: BatchCommandDialog.cpp  BatchCommands.cpp  BatchProcessDialog.cpp  Benchmark.cpp  CMakeLists.txt  DoEffect.cpp  EffectAndCommandPluginManager.cpp  EffectAndCommandPluginManager.h  FreqWindow.cpp  LabelTrack.cpp  LabelTrack.h  LibAudacityHelpers.cpp  LibAudacityHelpers.h  MixerBoard.cpp  NoteTrack.cpp  NoteTrack.h  ProjectAudioManager.cpp  ProjectFileManager.cpp  ProjectManager.h  RealtimeEffectPanel.cpp  RealtimeEffectPanel.h  SpectralDataManager.h  SpectrumTransformer.cpp  SpectrumTransformer.h  TempoDetectionDialog.cpp  TempoDetectionDialog.h  TrackArt.cpp  TrackArtist.cpp  TrackArtist.h  TrackPanel.cpp  VoiceKey.cpp  WaveTrackLocation.cpp
tests/: AudioFileIO.cpp  AudioFileIO.h
(+460 files in other folders)
